# tseries

./: .cproject  .project  CMakeLists.txt  Makefile  Makefile.am  README  README.md  configure.ac  nrk.stat  nrk.stat2  tseries.1  tseries.1.in  tseries.ctl  tseries.ctl_batch  tseries.ctl_export  tseriesTEST.ctl  tseriesTEST.sh
batch/: metgrm_ps.sh  parameters.def  style.meteogram
beta/: beta.mk  metno-tseriesTEST.desktop  tseriesTEST
beta/debian/: control
beta/etc/tseriesTEST/: tseries.ctl
beta/share/applications/: metno-tseriesTEST.desktop
cmake/: MetnoQtTranslation.cmake  MetnoQtUtils.cmake
debian/: changelog  control  rules
debian_files/: changelog  control  rules  tseries-@METNO_VERSION@.postinst  tseries-@METNO_VERSION@.prerm
doc/: de_news.html  news.html  nn_index.html  no_news.html
etc/: etc.mk  svn-commit.tmp  tsDiagrams.batch  tsDiagrams.def  tsDiagrams.def.in  tsDiagramsREGIONS.def  tseries-bookmarks.VNN  tseries-bookmarks.common  tseries.ctl  tseries.ctl.in
etc/btseries/: pose.metdat  symbols.def  tsDiagrams.def  tseries.setup
etc/tseries/: tsDiagrams.def  tsDiagrams.def.in  tsDiagrams_export.def  tseries.ctl  tseries.ctl.in  tseriesTEST.ctl
etc/tseries-test/: tsDiagrams.def  tsDiagrams.def.in  tseries.ctl.in
images/: RainThunder.rgba  dark.rgba  darkPartlyCloud.rgba  fog.rgba  rain.rgba  rainDark.rgba  sleetSun.rgba  snow.rgba  snowDark.rgba  snowSun.rgba
include/: diImageIO.h  diPrintOptions.h  qtHelpDialog.h  qtPrintManager.h  qtsFilterManager.h  qtsMain.h  qtsShow.h  qtsSidebar.h  qtsTimeControl.h  qtsWork.h  tsConfigure.h  tsDatafileColl.h  tsDrawArea.h  tsRequest.h  tsSession.h  tsSessionOptions.h  tsSetup.h
lang/: tseries_de.ts  tseries_fr.ts  tseries_nn.ts  tseries_no.ts  tseries_se.ts
share/: CMakeLists.txt  share-test.mk  share.mk
share/applications/: metno-tseries-test.desktop  metno-tseries.desktop  metno-tseries.desktop.in
share/doc/: de_index.html  index.html  no_index.html
share/doc/tseries/: news.html  tseries.xpm
share/lang/: tseries_no.ts  tseries_se.ts
share/pixmaps/: lightRainThunderSun.rgba  partlyCloud.rgba  sun.rgba  ts_active.xpm
share/pixmaps/tseries/: SnowThunder.rgba  circle_mixed.rgba  cloud.rgba  lightCloud.rgba  lightRain.rgba  lightRainSun.rgba  sleet.rgba
share/style/: style.accumprecip  style.eps_plum_rr  style.eps_rr  style.eps_rr24  style.eps_rr24t2m_noens_op  style.eps_t2m  style.eps_z500  style.lameps_rr  style.meteogram  style.proff_edit
share/style-test/: style.eps_rr  style.lameps_ff  style.lameps_rr  style.meteogram  style.meteogram_ff
share/tseries/style/: style.eps_rr  style.eps_rrt2m  style.proff_combi
smhi/etc/: etc.mk
smhi/etc/btseries/: btseries.input  style.eps_z500
smhi/etc/tseries/: HirlamC22.grib  HirlamE11.grib  tsDiagrams.batch  tsDiagrams.def  tsDiagramsREGIONS.def  tsDiagrams_export.def  tsDiagrams_export.def_C11  tsDiagrams_export.def_ari  tsDiagrams_export.def_orig  tsDiagrams_export.def_smhi  tsDiagrams_export.def_strict  tseries.ctl  tseries.ctl_SMHI  tseries.ctl_SMHI2  tseries.ctl_export  tseries.ctl_export_ari  tseries.ctl_strict
src/: CMakeLists.txt  ClearLineEdit.cc  ClearLineEdit.h  CoordinateTab.cc  CoordinateTab.h  FetchStations.cc  FetchStations.h  FimexTab.cc  FimexTab.h  Makefile  Makefile.am  ParameterFilterDialog.cc  ParameterFilterDialog.h  PrepareDataThread.cc  PrepareDataThread.h  ProgressThread.cc  ProgressThread.h  StationTab.cc  StationTab.h  WdbBookmarkTools.cc  WdbBookmarkTools.h  btseries.cc  diImageIO.cc  diImageIO.h  diPrintOptions.cc  diPrintOptions.h  qtHelpDialog.cc  qtPrintManager.cc  qtPrintManager.h  qtsFilterManager.cc  qtsFilterManager.h  qtsMain.cc  qtsMain.h  qtsShow.cc  qtsShow.h  qtsSidebar.cc  qtsSidebar.h  qtsTimeControl.cc  qtsTimeControl.h  qtsWork.cc  (+16 more)
style/: style.lameps_ff  style.lameps_rr  style.lameps_t2m
tseries-test/: beta.mk
tseries-test/debian/: changelog  rules
